k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  namespace: wisecow  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: mayank2553/wisecow-image-repo:latest
        ports:
        - containerPort: 4499
        startupProbe:
          tcpSocket:
            port: 4499
          periodSeconds: 3
          failureThreshold: 30
        readinessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
            tcpSocket:
              port: 4499
            initialDelaySeconds: 10
            periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
