k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  namespace: wisecow
spec:
  type: ClusterIP
  selector:
    app: wisecow
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4499
